Fix for bottom nav covering text field 2

--- a/style.css
+++ b/style.css
@@ -1273,6 +1273,8 @@ header .wrap{
   bottom:0;
   left:0;
   right:0;
+  
+  height:72px;
 
   display:flex;
   justify-content:space-around;
@@ -2511,4 +2513,8 @@ body{
 #difficultWordsPanel{
   background:#fff4e8;
   border:1px solid #f3dcc0;
+}
+
+#challengeChat{
+  padding-bottom:100px;
 }
